Fix index spacing

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -538,17 +538,6 @@ h1 {
     }
 }
 
-/* Fade out when hovering over links (NOT nav and footer links) */
-
-@keyframes fadeOut {
-    from {
-        opacity: 100%;
-    }
-    to {
-        opacity: 50%
-    }
-}
-
 /********** RESPONSIVE **********/
 
 /* Use a media query to add a breakpoint at 800px: */
@@ -602,6 +591,7 @@ h1 {
 
     h2 {
         line-height: 1;
+        font-size: 24px;
     }
 
     .sideBlank {
@@ -626,11 +616,11 @@ h1 {
     }
 
     .point img {
-        width: 50%;
+        width: 40%;
     }
 
     .masthead1 {
-        font-size: 18px;
+        font-size: 24px;
     }
 
     .item {
@@ -665,7 +655,9 @@ h1 {
         font-size: 10px;
     }
 
-    .
+    .sideBlank {
+        display: none;
+    }
 
     .center {
         margin: 0%;
@@ -681,7 +673,7 @@ h1 {
         flex-direction: column;
     }
 
-    .sectionSubTextHalfNon, .sectionText, .sectionSubText, .sectionSubTextLong, .sectionSubTextHalf, .sectionSubTextHalfNon, .sectionText2 {
+    .sectionSubTextHalfNon, .sectionText, .sectionSubText, .sectionSubTextLong, .sectionSubTextHalf, .sectionSubTextHalfNon, .sectionText2, .detail {
         width: 100%;
         margin: 0%;
         max-width: 100%;
